--- a/WordQuiz/WordQuiz/WordQuiz.csproj
+++ b/WordQuiz/WordQuiz/WordQuiz.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="FirebaseDatabase.net" Version="4.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Plugin.MediaManager" Version="1.0.3" />
+    <PackageReference Include="Plugin.MediaManager.Forms" Version="1.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
