--- a/WordQuiz/WordQuiz.Android/WordQuiz.Android.csproj
+++ b/WordQuiz/WordQuiz.Android/WordQuiz.Android.csproj
@@ -69,6 +69,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.DataGrid">
+      <Version>3.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CloseApplication.cs" />
@@ -76,10 +79,19 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\31640-success-mouse.json" />
     <AndroidAsset Include="Assets\31570-mouse-error.json" />
+    <AndroidAsset Include="Assets\12038-people-illustration-for-humanmanager.json" />
+    <AndroidAsset Include="Assets\18045-teamwork-is-all-we-need.json" />
+    <AndroidAsset Include="Assets\31548-robot-says-hello.json" />
+    <AndroidAsset Include="Assets\9629-loading.json" />
+    <AndroidAsset Include="Assets\7655-rocket.json" />
+    <AndroidAsset Include="Assets\12955-no-internet-connection-empty-state.json" />
+    <AndroidAsset Include="Assets\14348-just-a-pigeon.json" />
+    <AndroidAsset Include="Assets\31669-rubiks-cube.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -119,6 +131,26 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\round_arrow_back_24.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bokeh553439.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\christmas2932077.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Activity_Splash.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\IARC.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\raw\False.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
