--- a/WordQuiz/WordQuiz.Android/WordQuiz.Android.csproj
+++ b/WordQuiz/WordQuiz.Android/WordQuiz.Android.csproj
@@ -183,5 +183,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\font\UbuntuBold.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Background2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Background3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\background5.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
